--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -11,14 +11,20 @@
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_map_marker_grey600_24dp"
+        android:layout_gravity="center"/>
+
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:padding="@dimen/paddingMediumGlobal"
+        android:padding="@dimen/paddingMinGlobal"
         android:layout_margin="@dimen/marginMediumGlobal"
-        android:layout_gravity="center_horizontal|bottom">
+        android:layout_gravity="start|bottom">
 
         <TextView
             android:id="@+id/txtLatitude"
@@ -37,7 +43,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="Test"
             android:id="@+id/btnLocation" />
     </LinearLayout>
 
