--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -69,7 +69,7 @@
                         android:gravity="center_vertical">
 
                         <ImageButton
-                            android:id="@+id/iBtnSelectGoogleMaps"
+                            android:id="@+id/iBtnSelectLocation"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/ic_google_maps_grey600_24dp"
