--- a/app/src/main/res/layout/fragment_place_in_map.xml
+++ b/app/src/main/res/layout/fragment_place_in_map.xml
@@ -5,39 +5,51 @@
     tools:context=".ui.fragment.PlaceInMapFragment">
 
 
-    <fragment
+    <!--<fragment
         android:id="@+id/mapVisitSucre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment"/>
+        class="com.google.android.gms.maps.SupportMapFragment"/>-->
+
+    <fragment
+        android:id="@+id/supportMap"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.apaza.moises.visitsucre.ui.fragment.SupportMap"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_map_marker_grey600_24dp"
+        android:layout_gravity="center"/>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:padding="@dimen/paddingMediumGlobal"
+        android:padding="@dimen/paddingMinGlobal"
         android:layout_margin="@dimen/marginMediumGlobal"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="start|bottom">
 
         <TextView
             android:id="@+id/txtLatitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Medium Text" />
 
         <TextView
             android:id="@+id/txtLongitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Medium Text" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
+            android:text="Test"
             android:id="@+id/btnLocation" />
     </LinearLayout>
 
