--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -37,8 +37,6 @@
 
         </LinearLayout>
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -80,13 +78,27 @@
                 android:scaleType="centerCrop" />
         </LinearLayout>
 
-
         <TextView
             android:id="@+id/resultTest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Medium Text" />
+
+
+        <FrameLayout
+            android:id="@+id/lyTest"
+            android:layout_width="match_parent"
+            android:layout_height="250dp">
+
+            <ImageView
+                android:id="@+id/ivMarker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_map_marker_grey600_24dp"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
