--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -91,12 +91,26 @@
             android:layout_width="match_parent"
             android:layout_height="250dp">
 
-            <ImageView
-                android:id="@+id/ivMarker"
+            <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/ic_map_marker_grey600_24dp"
-                android:layout_gravity="center"/>
+                android:layout_height="match_parent"
+                android:background="@color/color_success"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/marker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/ic_map_marker_grey600_24dp"
+                    android:layout_gravity="bottom|center_horizontal"/>
+
+                <View
+                    android:id="@+id/shadow"
+                    android:layout_width="20dp"
+                    android:layout_height="3dp"
+                    android:background="@drawable/marker_shadow"
+                    android:layout_gravity="bottom|center_horizontal"/>
+            </FrameLayout>
 
         </FrameLayout>
 
