--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -77,11 +77,11 @@
                             android:visibility="visible"/>
 
                         <TextView
-                            android:id="@+id/tvAddress"
+                            android:id="@+id/tvAddressPlace"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Plaza 25 de mayo" />
+                            android:text="test easdfsafdasd" />
 
                     </LinearLayout>
 
