--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -27,7 +27,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/selectImage"
+                    android:id="@+id/image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_camera_burst_grey600_48dp"
