--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -57,7 +57,7 @@
                     moi:iconImage="@mipmap/ic_camera_iris_grey600_24dp"
                     moi:hint="@string/name"
                     moi:maxLengthEnabled="true"
-                    moi:maxLength="15"
+                    moi:maxLength="25"
                     android:inputType="textCapSentences"/>
 
                 <com.apaza.moises.visitsucre.ui.InputTextView
@@ -68,7 +68,7 @@
                     moi:hint="@string/description"
                     moi:maxLengthEnabled="true"
                     moi:maxLength="250"
-                    android:inputType="textMultiLine"
+                    android:inputType="textMultiLine|textCapSentences"
                     android:lines="3"/>
 
                 <FrameLayout
