--- a/app/src/main/res/layout/fragment_place_list.xml
+++ b/app/src/main/res/layout/fragment_place_list.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="wrap_content"
