--- a/app/src/main/res/layout/fragment_register_place.xml
+++ b/app/src/main/res/layout/fragment_register_place.xml
@@ -27,11 +27,10 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/ivSelectImage"
+                    android:id="@+id/ivPlaceImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@mipmap/default_profile"
-                    android:padding="@dimen/paddingMediumGlobal"
                     android:layout_gravity="center_horizontal" />
 
             </LinearLayout>
@@ -133,7 +132,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabSelectImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
